create doctor-info on swagger and refactored code by index.ts
